# mcp-memory-py

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: python-publish.yml  tests.yml
src/mcp_memory_py/: knowledge_graph.py  server.py
src/memory_python/: index.py  server.py  test_knowledge_graph.py
tests/memory_python/: test_knowledge_graph.py
